--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Steven Beshensky",
-  "short_name": "sbesh.com",
+  "name": "Steven And Ashley",
+  "short_name": "SNA",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
