--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "3.2.0",
     "lit-html": "^0.14.0",
+    "lozad": "^1.7.0",
     "page": "^1.11.3",
     "pwa-helpers": "^0.9.0",
     "style-loader": "^0.23.1",
