remove lazy load, fix clipping issues

--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "devDependencies": {
     "@material/mwc-ripple": "^0.1.0",
     "@polymer/lit-element": "^0.6.4",
+    "@webcomponents/webcomponentsjs": "^2.2.1",
     "animate-css-grid": "^1.0.4",
     "css-loader": "^2.0.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "3.2.0",
+    "intersection-observer": "^0.5.1",
     "lit-html": "^0.14.0",
-    "lozad": "^1.7.0",
     "page": "^1.11.3",
     "pwa-helpers": "^0.9.0",
     "style-loader": "^0.23.1",
