--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "web-animations-js": "^2.3.1",
     "webpack": "4.17.1",
     "webpack-cli": "3.1.0",
-    "webpack-dev-server": "3.1.5"
+    "webpack-dev-server": "3.1.5",
+    "@polymer/paper-input": "^3.0.1",
+    "@polymer/iron-form": "^3.0.1",
+    "@polymer/paper-button": "^3.0.1"
   },
   "dependencies": {}
 }
