--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   "license": "ISC",
   "devDependencies": {
     "@material/mwc-ripple": "^0.1.0",
-    "lit-element": "^2.0.0-rc.2",
+    "@polymer/iron-form": "^3.0.1",
+    "@polymer/paper-button": "^3.0.1",
+    "@polymer/paper-input": "^3.0.1",
+    "@polymer/paper-radio-button": "^3.0.1",
+    "@polymer/paper-radio-group": "^3.0.1",
     "@webcomponents/webcomponentsjs": "^2.2.1",
     "animate-css-grid": "^1.0.4",
     "css-loader": "^2.0.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "3.2.0",
     "intersection-observer": "^0.5.1",
+    "lit-element": "^2.0.0-rc.2",
     "lit-html": "^1.0.0-rc.2",
     "page": "^1.11.3",
     "pwa-helpers": "^0.9.0",
@@ -27,12 +32,7 @@
     "web-animations-js": "^2.3.1",
     "webpack": "4.17.1",
     "webpack-cli": "3.1.0",
-    "webpack-dev-server": "3.1.5",
-    "@polymer/paper-input": "^3.0.1",
-    "@polymer/iron-form": "^3.0.1",
-    "@polymer/paper-button": "^3.0.1",
-    "@polymer/paper-radio-button": "^3.0.1",
-    "@polymer/paper-radio-group": "^3.0.1"
+    "webpack-dev-server": "3.1.5"
   },
   "dependencies": {}
 }
