--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "page": "^1.11.3",
     "pwa-helpers": "^0.9.0",
     "style-loader": "^0.23.1",
+    "tools": "git+https://git@github.com/sbesh91/tools.git",
     "uglifyjs-webpack-plugin": "1.3.0",
     "web-animations-js": "^2.3.1",
     "webpack": "4.17.1",
